# dfdx

./: Cargo.toml
dfdx-core/: Cargo.toml
dfdx-core/src/nn_traits/: mod.rs  tuples.rs  vecs.rs
dfdx-core/src/shapes/: slice.rs
dfdx-core/src/tensor/: mod.rs  numpy.rs
dfdx-core/src/tensor_ops/: mod.rs
dfdx-core/src/tensor_ops/utilities/: device.rs
dfdx-derives/src/: lib.rs
dfdx/examples/: 09-module-sequential.rs  10-module-gradients.rs  11-module-optim.rs  12-mnist.rs  advanced-gradient-accum.rs  advanced-resnet18.rs  advanced-rl-dqn.rs  advanced-rl-ppo.rs
dfdx/src/: lib.rs
dfdx/src/nn/layers/: add_into.rs  conv_trans2d.rs  generalized_add.rs  generalized_mul.rs  mod.rs  on.rs  residual_add.rs  residual_mul.rs  transformer.rs  upscale2d.rs
dfdx/src/nn/layers/ops/: add.rs  bce.rs  boolean.rs  broadcast.rs  choose.rs  clamp.rs  cmp.rs  div.rs  dropout.rs  huber_error.rs  leaky_relu.rs  logsumexp_to.rs  max_to.rs  maximum.rs  mean_to.rs  min_to.rs  minimum.rs  mod.rs  mul.rs  nans_to.rs  negate.rs  normalize.rs  permute_to.rs  pool_2d_avg.rs  pool_2d_max.rs  pool_2d_min.rs  pow.rs  realize_to.rs  reshape.rs  stddev_to.rs  var_to.rs
