[package]
name = "dfdx-core"
version = "0.13.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.65"

description = "Ergonomic auto differentiation in Rust, with pytorch like apis."
homepage = "https://github.com/coreylowman/dfdx"
documentation = "https://docs.rs/dfdx"
repository = "https://github.com/coreylowman/dfdx"
readme = "README.md"

keywords = [
    "deep-learning",
    "neural-network",
    "backprop",
    "tensor",
    "autodiff",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = ["nightly", "numpy", "safetensors", "cuda", "ci-check"]

[dependencies]
no-std-compat = { version = "0.4.1", default-features = false, features = [ "alloc", "compat_hash" ], optional = true }
spin = { version = "0.9.8", default-features = false, features = ["spin_mutex", "rwlock", "portable_atomic"], optional = true }
rand = { workspace = true }
rand_distr = { workspace = true }
zip = { version = "2.2.2", default-features = false, optional = true }
cudarc = { version = "0.13.4", default-features = false, optional = true, features = ["driver", "cublas", "nvrtc"] }
num-traits = { workspace = true }
safetensors = { workspace = true, optional = true }
memmap2 = { workspace = true, optional = true }
half = { version = "2.3.1", optional = true, features = ["num-traits", "rand_distr"] }
gemm = { version = "0.18.2", default-features = false, optional = true, features = ["rayon"] }
rayon = { version = "1.10.0", optional = true }
libm = { workspace = true }
wgpu = { version = "24.0.0", features = ["glsl", "spirv"], optional = true }
naga = { version = "24.0.0", optional = true }
futures-lite = { version = "2.0.1", optional = true }
thingbuf = { version = "0.1.4", optional = true }

[dev-dependencies]
tempfile = "3.3.0"
mnist = "0.6.0"
indicatif = "0.17.3"

[build-dependencies]
glob = { version = "0.3.1", optional = true }

[features]
default = ["std", "fast-alloc", "cpu"]
nightly = ["half?/use-intrinsics", "gemm?/nightly"]

std = ["cudarc?/std", "rand_distr/std_math", "gemm?/std"]
no-std = ["no-std-compat", "dep:spin", "cudarc?/no-std", "num-traits/libm"]

cpu = ["dep:gemm", "dep:rayon"]
fast-alloc = ["std"]

cuda = ["dep:cudarc", "dep:glob"]
cuda-version-from-build-system = ["cuda", "cudarc?/cuda-version-from-build-system"]
cuda-11040 = ["cuda", "cudarc?/cuda-11040"]
cuda-11050 = ["cuda", "cudarc?/cuda-11050"]
cuda-11060 = ["cuda", "cudarc?/cuda-11060"]
cuda-11070 = ["cuda", "cudarc?/cuda-11070"]
cuda-11080 = ["cuda", "cudarc?/cuda-11080"]
cuda-12000 = ["cuda", "cudarc?/cuda-12000"]
cuda-12010 = ["cuda", "cudarc?/cuda-12010"]
cuda-12020 = ["cuda", "cudarc?/cuda-12020"]
cuda-12030 = ["cuda", "cudarc?/cuda-12030"]
cuda-12040 = ["cuda", "cudarc?/cuda-12040"]
cuda-12050 = ["cuda", "cudarc?/cuda-12050"]
cuda-12060 = ["cuda", "cudarc?/cuda-12060"]
cudnn = ["cuda", "cudarc?/cudnn"]
webgpu = [
    "dep:wgpu",
    "dep:futures-lite",
    "dep:thingbuf",
    "dep:naga",
    "dep:glob",
]

f16 = ["dep:half", "cudarc?/f16", "gemm?/f16"]

numpy = ["dep:zip", "std"]
safetensors = ["dep:safetensors", "std", "dep:memmap2"]

test-f16 = ["f16"]
test-amp-f16 = ["f16"]
test-f64 = []
test-integrations = []
ci-check = []
